# rusty-editor

./: .gitignore  Cargo.toml  config.lua  test_file.rs
src/: action.rs  buffer.rs  config.lua  editor.rs  logger.rs  main.rs  mode.rs  viewport.rs
src/buff/: mod.rs
src/editor/: mod.rs  modal_input.rs
src/editor/core/: action.rs  chartype.rs  command.rs  editor_handler.rs  keybind_manager.rs  mod.rs  mode.rs  new_keybind_manager.rs
src/editor/core/actions/: action.rs  deletion.rs  insertion.rs  mod.rs  movement.rs  search.rs  undo.rs  viewport.rs  yank_past.rs
src/editor/ui/: clear.rs  draw.rs  mod.rs  popup.rs  toast.rs
src/editor/ui/draw/: bottom.rs  current_viewport.rs  mod.rs  modal.rs
src/editor/ui/modal/: create.rs  delete.rs  mod.rs  modal_trait.rs  rename.rs
src/helper/: clipboard.rs  logger.rs  lua_handler.rs  mod.rs
src/modal/: create.rs  delete.rs  modal_trait.rs  rename.rs
src/theme/: color_highligther.rs  colors.lua  colors.rs  icon.rs  mod.rs
src/viewport/: mod.rs
src/viewport/core/: languages.rs  mod.rs  movement.rs  popup.rs  viewport_type.rs
src/viewport/ui/: draw.rs  popup.rs
src/viewport/ui/draw/: file.rs  file_explorer.rs  mod.rs  tree_highlight.rs  visual_block.rs
src/viewports/: draw.rs  mod.rs
tests_data/: test.txt
