[package]
name = "rusty-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
crossterm = "0.28.1"
mlua = { version = "0.10.3", features = ["lua54"] }
streaming-iterator = "0.1.9"
tree-sitter = "0.24.4"
tree-sitter-lua = "0.2.0"
tree-sitter-rust = "0.23.2"
winapi = "0.3.9"

[dev-dependencies]
tempfile = "3"
