[package]
name = "rusty-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
crossterm = "0.28.1"
dirs = "6.0.0"
mlua = { version = "0.10.3", features = ["lua54"] }
once_cell = "1.21.1"
streaming-iterator = "0.1.9"
tree-sitter = "0.24.4"
tree-sitter-css = "0.23.2"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-lua = "0.2.0"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
winapi = "0.3.9"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rusty"
path = "src/main.rs"
